fix images squishing together yeeeee

--- a/server/public/styles/gallery.css
+++ b/server/public/styles/gallery.css
@@ -18,6 +18,7 @@
 
 .slidey {
     height: 100%;
+    width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
